<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/artDetailImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/artDetailArtNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="monospace"
        android:hint="Name"
        android:padding="5dp"
        android:textColorHint="#808080"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/artDetailArtistNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="monospace"
        android:hint="Artist"
        android:padding="5dp"
        android:textColorHint="#808080"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/artDetailYearEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="monospace"
        android:hint="Year"
        android:padding="5dp"
        android:textColorHint="#808080"
        android:textSize="25sp" />

    <Button
        android:id="@+id/artDetailSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="monospace"
        android:hint="  SAVE  "
        android:padding="5dp"
        android:textColorHint="@color/white"
        android:textSize="25sp" />

</LinearLayout>
